--- a/src/assets/container/container.css
+++ b/src/assets/container/container.css
@@ -1,3 +1,18 @@
 .cont{
     padding-top: 4rem;
+    text-align: center;
+    width: 100%;
+}
+.card-display{
+    background-color:#e0dede;
+    width: 350px;
+    height: 200px;
+    margin: auto;
+    display: flex;
+    border-radius: 10px;
+}
+.cont-card-number{
+    margin: auto;
+    width: 300px;
+    height: 150px;
 }
